<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="235dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/caratula" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="168dp"
        android:text="@string/tittle_a1"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtidjournal"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="97dp"
        android:text="@string/prov_a1"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <Spinner
        android:id="@+id/idprovider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_below="@+id/idprovider"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="125dp"
        android:onClick="eventSearch"
        android:text="@string/btnsearch_a1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:text="@string/jour_a1"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/txtidjournal"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/helptxt_a1" />

</RelativeLayout>